Add more papers and embed them into the paper

--- a/hauptprojekt.bib
+++ b/hauptprojekt.bib
@@ -44,7 +44,7 @@
 	keywords = {ACM Classification Keywords,Author Keywords MSaaS,Multi-Agent System,cloud computing,distributed simulation},
 	pages = {to appear},
 	title = {{Modeling {\&} Simulation as a Service with the Massive Multi-Agent System MARS}},
-	url = {http://delivery.acm.org/10.1145/2980000/2972194/a1-huning.pdf?ip=141.22.29.209{\&}id=2972194{\&}acc=ACTIVE SERVICE{\&}key=2BA2C432AB83DA15.7953D496BAF38C0F.4D4702B0C3E38B35.4D4702B0C3E38B35{\&}CFID=979118366{\&}CFTOKEN=56484555{\&}{\_}{\_}acm{\_}{\_}=1504188755{\_}0dab09414e993a38550dc7d7848c03ea},
+	url = {https://dl.acm.org/citation.cfm?id=2972194},
 	year = {2016}
 }
 @article{Kitchin2013,
@@ -139,6 +139,95 @@
 	url = {http://dl.acm.org/citation.cfm?doid=2345316.2345346},
 	year = {2012}
 }
-
-
+@article{Wang2016,
+	abstract = {Natural or man-made disasters can cause different kinds of moving obstacles (e.g., fires, plumes, floods), which make some parts of the road network temporarily unavailable. After such incidents occur, responders have to go to different destinations to perform their tasks in the environment affected by the disaster. Therefore they need a path planner that is capable of dealing with such moving obstacles, as well as generating and coordinating their routes quickly and efficiently. In this paper, we present a novel approach for using a multi-agent system for navigating one or multiple responders to one or multiple destinations in the presence of moving obstacles. Our navigation system supports information collection from hazard simulations, spatio-temporal data processing and analysis, connection with a geo-database, and route generation in dynamic environments affected by disasters. We design and develop a set of software geospatial agents that assist emergency actors in dealing with the spatio-temporal data required for emergency navigation, based on their roles in the disaster response. One of the key components of the system is the path planning module, which combines the modified A* algorithm, insertion heuristics, and auction algorithm to calculate obstacle-avoiding routes for multiple responders with multiple destinations. A spatial data model is designed to support the storage of information about the tasks and routes produced during the disaster response. Our system has been validated using four navigation cases. Some preliminary results are presented in this paper and show the potential of the system for solving more navigation cases.},
+	author = {Wang, Zhiyong and Zlatanova, Sisi},
+	doi = {10.1016/j.compenvurbsys.2015.11.001},
+	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Wang, Zlatanova - 2016 - Multi-agent based path planning for first responders among moving obstacles.pdf:pdf},
+	issn = {01989715},
+	journal = {Computers, Environment and Urban Systems},
+	keywords = {Algorithms,Moving obstacles,Multi-agent system,Path planning,Spatial data model},
+	mendeley-groups = {GIS},
+	pages = {48--58},
+	title = {{Multi-agent based path planning for first responders among moving obstacles}},
+	url = {https://ac.els-cdn.com/S0198971515300314/1-s2.0-S0198971515300314-main.pdf?{\_}tid=a4efc2fe-acd7-11e7-bb3f-00000aacb360{\&}acdnat=1507542964{\_}9e66242a9d8017bb04c41fff21c2e415},
+	volume = {56},
+	year = {2016}
+}
+@article{ruuvzivcka2016comparing,
+	title={Comparing speed of Web Map Service with GeoServer on ESRI Shapefile and PostGIS},
+	author={Ruzicka, Jan},
+	journal={Geoinformatics FCE CTU},
+	volume={15},
+	number={1},
+	pages={3--9},
+	year={2016}
+}
+@inproceedings{Maia2016,
+	abstract = {{\textcopyright} 2016 AISTI.With the advent of Web 2.0 and mobile technology, including, smartphones equipped with GPS (Global Positioning System) receptors, there has been an increase in the number of individuals who create and share spatial data. Consequently, the ability to store a large quantity of data, in diverse formats is made possible by Geographic Information Systems that use voluntary data. This study presents a Voluntary Information System using a document-based NoSQL database that fulfills the requirements of data scalability and heterogeneity.},
+	author = {Maia, Daniel Cosme Mendonca and Camargos, Breno D.C. and Holanda, Maristela},
+	booktitle = {Iberian Conference on Information Systems and Technologies, CISTI},
+	doi = {10.1109/CISTI.2016.7521439},
+	isbn = {9789899843462},
+	issn = {21660735},
+	keywords = {Document-based NoSQL,Geographical Data,NoSQL Database,Voluntary Geographic Information System},
+	mendeley-groups = {GIS Performance},
+	month = {jun},
+	pages = {1--6},
+	publisher = {IEEE},
+	title = {{Voluntary geographic information systems with document-based NoSQL databases}},
+	url = {http://ieeexplore.ieee.org/document/7521439/},
+	volume = {2016-July},
+	year = {2016}
+}
+@article{Toups2016,
+	author = {Toups, Matthew A},
+	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Toups - 2016 - A study of three paradigms for storing geospatial data distributed-cloud model, relational database, and indexed flat fil.pdf:pdf},
+	journal = {University of New Orleans Theses and Dissertations},
+	keywords = {Accumulo,GeoMesa,OpenStreetMap,PostGIS,geospatial index,spatial database},
+	mendeley-groups = {GIS Performance},
+	pages = {44},
+	title = {{A study of three paradigms for storing geospatial data: distributed-cloud model, relational database, and indexed flat file}},
+	url = {http://scholarworks.uno.edu/td http://scholarworks.uno.edu/td/2196},
+	year = {2016}
+}
+@article{Aji2013,
+	abstract = {Support of high performance queries on large volumes of spatial data becomes increasingly important in many application domains, including geospatial problems in numerous fields, location based services, and emerging scientific applications that are increasingly data- and compute-intensive. The emergence of massive scale spatial data is due to the proliferation of cost effective and ubiquitous positioning technologies, development of high resolution imaging technologies, and contribution from a large number of community users. There are two major challenges for managing and querying massive spatial data to support spatial queries: the explosion of spatial data, and the high computational complexity of spatial queries. In this paper, we present Hadoop-GIS - a scalable and high performance spatial data warehousing system for running large scale spatial queries on Hadoop. Hadoop-GIS supports multiple types of spatial queries on MapReduce through spatial partitioning, customizable spatial query engine RESQUE, implicit parallel spatial query execution on MapReduce, and effective methods for amending query results through handling boundary objects. Hadoop-GIS utilizes global partition indexing and customizable on demand local spatial indexing to achieve efficient query processing. Hadoop-GIS is integrated into Hive to support declarative spatial queries with an integrated architecture. Our experiments have demonstrated the high efficiency of Hadoop-GIS on query response and high scalability to run on commodity clusters. Our comparative experiments have showed that performance of Hadoop-GIS is on par with parallel SDBMS and outperforms SDBMS for compute-intensive queries. Hadoop-GIS is available as a set of library for processing spatial queries, and as an integrated software package in Hive.},
+	archivePrefix = {arXiv},
+	arxivId = {NIHMS150003},
+	author = {Aji, Ablimit and Wang, Fusheng and Vo, Hoang and Lee, Rubao and Liu, Qiaoling and Zhang, Xiaodong and Saltz, Joel},
+	doi = {10.1016/j.micinf.2011.07.011.Innate},
+	eprint = {NIHMS150003},
+	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Aji et al. - 2013 - Hadoop-GIS A High Performance Spatial Data Warehousing System over MapReduce(2).pdf:pdf},
+	isbn = {6176321972},
+	issn = {2150-8097},
+	journal = {Proceedings of the VLDB Endowment},
+	mendeley-groups = {GIS Performance},
+	month = {aug},
+	number = {11},
+	pages = {1009},
+	pmid = {24187650},
+	publisher = {NIH Public Access},
+	title = {{Hadoop-GIS: A High Performance Spatial Data Warehousing System over MapReduce}},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/24187650 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3814183},
+	volume = {6},
+	year = {2013}
+}
+@article{Abouzeid2009,
+	abstract = {The production environment for analytical data management ap- plications is rapidly changing. Many enterprises are shifting away from deploying their analytical databases on high-end proprietary machines, and moving towards cheaper, lower-end, commodity hardware, typically arranged in a shared-nothing MPP architecture, often in a virtualized environment inside public or private “clouds”. At the same time, the amount of data that needs to be analyzed is exploding, requiring hundreds to thousands of machines to work in parallel to perform the analysis. There tend to be two schools of thought regarding what tech- nology to use for data analysis in such an environment. Propo- nents of parallel databases argue that the strong emphasis on per- formance and efficiency of parallel databases makes them well- suited to perform such analysis. On the other hand, others argue that MapReduce-based systems are better suited due to their supe- rior scalability, fault tolerance, and flexibility to handle unstructured data. In this paper, we explore the feasibility of building a hybrid system that takes the best features from both technologies; the pro- totype we built approaches parallel databases in performance and efficiency, yet still yields the scalability, fault tolerance, and flexi- bility of MapReduce-based systems.},
+	author = {Abouzeid, Azza and Bajda-Pawlikowski, Kamil and Abadi, Daniel and Silberschatz, Avi and Rasin, Alexander},
+	doi = {10.1145/945445.945462},
+	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Abouzeid et al. - Unknown - HadoopDB An Architectural Hybrid of MapReduce and DBMS Technologies for Analytical Workloads.pdf:pdf},
+	isbn = {0000000000000},
+	issn = {2150-8097},
+	journal = {Proceedings of the VLDB Endowment},
+	mendeley-groups = {GIS Performance},
+	number = {1},
+	pages = {922--933},
+	pmid = {685953},
+	title = {{HadoopDB: an architectural hybrid of MapReduce and DBMS technologies for analytical workloads}},
+	url = {https://dl.acm.org/citation.cfm?id=1687731},
+	volume = {2},
+	year = {2009}
+}
 
