--- a/hauptprojekt.bib
+++ b/hauptprojekt.bib
@@ -150,7 +150,7 @@
 	mendeley-groups = {GIS},
 	pages = {48--58},
 	title = {{Multi-agent based path planning for first responders among moving obstacles}},
-	url = {https://ac.els-cdn.com/S0198971515300314/1-s2.0-S0198971515300314-main.pdf?{\_}tid=a4efc2fe-acd7-11e7-bb3f-00000aacb360{\&}acdnat=1507542964{\_}9e66242a9d8017bb04c41fff21c2e415},
+	url = {http://www.sciencedirect.com/science/article/pii/S0198971515300314},
 	volume = {56},
 	year = {2016}
 }
