--- a/hauptprojekt.bib
+++ b/hauptprojekt.bib
@@ -14,7 +14,7 @@
 	pages = {51},
 	publisher = {Springer, Berlin, Heidelberg},
 	title = {{The Optimal Universal Transverse Mercator Projection}},
-	url = {http://link.springer.com/10.1007/978-3-642-79824-5{\_}13},
+	url = {https://link.springer.com/chapter/10.1007/978-3-642-79824-5_13},
 	year = {1995}
 }
 @article{Graham2013,
@@ -30,7 +30,7 @@
 	number = {3},
 	pages = {255--261},
 	title = {{Geography and the future of big data, big data and the future of geography}},
-	url = {http://journals.sagepub.com/doi/pdf/10.1177/2043820613513121 http://dhg.sagepub.com/content/3/3/255.short{\%}5Cnhttp://dhg.sagepub.com/lookup/doi/10.1177/2043820613513121{\%}5Cnhttp://dhg.sagepub.com/lookup/doi/10.1177/2043820613513121},
+	url = {http://journals.sagepub.com/doi/abs/10.1177/2043820613513121},
 	volume = {3},
 	year = {2013}
 }
@@ -60,7 +60,7 @@
 	number = {3},
 	pages = {262--267},
 	title = {{Big data and human geography: Opportunities, challenges and risks}},
-	url = {http://journals.sagepub.com/doi/pdf/10.1177/2043820613513388 http://dhg.sagepub.com/content/3/3/262.short{\%}5Cnhttp://dhg.sagepub.com/lookup/doi/10.1177/2043820613513388},
+	url = {http://journals.sagepub.com/doi/abs/10.1177/2043820613513388},
 	volume = {3},
 	year = {2013}
 }
@@ -77,7 +77,7 @@
 	number = {2},
 	pages = {74--81},
 	title = {{Geospatial Big Data: Challenges and Opportunities}},
-	url = {www.elsevier.com/locate/bdr http://www.sciencedirect.com/science/article/pii/S2214579615000040 http://linkinghub.elsevier.com/retrieve/pii/S2214579615000040},
+	url = {http://www.sciencedirect.com/science/article/pii/S2214579615000040},
 	volume = {2},
 	year = {2015}
 }
@@ -110,7 +110,7 @@
 	pages = {165--178},
 	publisher = {ACM Press},
 	title = {{A Comparison of Approaches to Large-Scale Data Analysis}},
-	url = {http://portal.acm.org/citation.cfm?doid=1559845.1559865 http://portal.acm.org/citation.cfm?id=1559865},
+	url = {http://portal.acm.org/citation.cfm?doid=1559845.1559865},
 	volume = {12},
 	year = {2009}
 }
@@ -121,7 +121,7 @@
 	mendeley-groups = {GIS Performance},
 	pages = {13},
 	title = {{Hadoop-GIS : A High Performance Spatial Query System for Analytical Medical Imaging with MapReduce}},
-	url = {http://www3.cs.stonybrook.edu/{~}fuswang/papers/CCI-TR-2011-3.pdf http://confluence.cci.emory.edu:8090//download/attachments/4033450/CCI-TR-2011-3.pdf},
+	url = {http://www3.cs.stonybrook.edu/~fuswang/papers/CCI-TR-2011-3.pdf},
 	year = {2011}
 }
 @article{Witayangkurn2012,
@@ -188,7 +188,7 @@
 	mendeley-groups = {GIS Performance},
 	pages = {44},
 	title = {{A study of three paradigms for storing geospatial data: distributed-cloud model, relational database, and indexed flat file}},
-	url = {http://scholarworks.uno.edu/td http://scholarworks.uno.edu/td/2196},
+	url = {http://scholarworks.uno.edu/td/2196},
 	year = {2016}
 }
 @article{Aji2013,
@@ -209,11 +209,11 @@
 	pmid = {24187650},
 	publisher = {NIH Public Access},
 	title = {{Hadoop-GIS: A High Performance Spatial Data Warehousing System over MapReduce}},
-	url = {http://www.ncbi.nlm.nih.gov/pubmed/24187650 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3814183},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/24187650},
 	volume = {6},
 	year = {2013}
 }
-@article{Abouzeid2009,
+@article{Abouzeid,
 	abstract = {The production environment for analytical data management ap- plications is rapidly changing. Many enterprises are shifting away from deploying their analytical databases on high-end proprietary machines, and moving towards cheaper, lower-end, commodity hardware, typically arranged in a shared-nothing MPP architecture, often in a virtualized environment inside public or private “clouds”. At the same time, the amount of data that needs to be analyzed is exploding, requiring hundreds to thousands of machines to work in parallel to perform the analysis. There tend to be two schools of thought regarding what tech- nology to use for data analysis in such an environment. Propo- nents of parallel databases argue that the strong emphasis on per- formance and efficiency of parallel databases makes them well- suited to perform such analysis. On the other hand, others argue that MapReduce-based systems are better suited due to their supe- rior scalability, fault tolerance, and flexibility to handle unstructured data. In this paper, we explore the feasibility of building a hybrid system that takes the best features from both technologies; the pro- totype we built approaches parallel databases in performance and efficiency, yet still yields the scalability, fault tolerance, and flexi- bility of MapReduce-based systems.},
 	author = {Abouzeid, Azza and Bajda-Pawlikowski, Kamil and Abadi, Daniel and Silberschatz, Avi and Rasin, Alexander},
 	doi = {10.1145/945445.945462},
@@ -229,5 +229,11 @@
 	url = {https://dl.acm.org/citation.cfm?id=1687731},
 	volume = {2},
 	year = {2009}
+}
+@book{meer2012atlas,
+	title={Atlas of the World. Gerard Mercator's Map of the World (1569).},
+	author={Meer},
+	year={2012},
+	publisher={Walburg Pers bv}
 }
 
