--- a/hawstyle.sty
+++ b/hawstyle.sty
@@ -309,17 +309,17 @@
   {\setlength{\parindent}{0em}\bfseries\theHAWThesisAuthor}\\
   \medskip
 
-  {\setlength{\parindent}{0em}\bfseries Thema der Arbeit}\\
+  {\setlength{\parindent}{0em}\bfseries Title}\\
   \theHAWThesisTitle%
   \ifthenelse{\equal{\theHAWThesisSubTitle}{}}{}{%
     \theHAWSubTitleDelimiter\ \theHAWThesisSubTitle}
   \medskip
 
-  {\setlength{\parindent}{0em}\bfseries Stichworte}\\
+  {\setlength{\parindent}{0em}\bfseries Tags}\\
   #1
   \medskip
 
-  {\setlength{\parindent}{0em}\bfseries Kurzzusammenfassung}\\
+  {\setlength{\parindent}{0em}\bfseries Summary}\\
   #2
   \@ifundefined{otherlanguage}{}{\end{otherlanguage}}
 
