beginning of restructuring

--- a/hauptprojekt.bib
+++ b/hauptprojekt.bib
@@ -236,4 +236,29 @@
 	year={2012},
 	publisher={Walburg Pers bv}
 }
+@book{Wooldridge2009,
+	abstract = {2nd ed. This book will introduce students to intelligent agents, explain what these agents are, how they are constructed and how they can be made to co-operate effectively with one another in large-scale systems. Intelligent Agents -- Deductive Reasoning Agents -- Practical Reasoning Agents -- Reactive and Hybrid Agents -- Understanding Each Other -- Communicating -- Working Together -- Methodologies -- Applications -- Multiagent Interactions -- Making Group Decisions -- Forming Coalitions -- Allocating Scarce Resources -- Bargaining -- Arguing -- Logical Foundations.},
+	author = {Wooldridge, Michael J.},
+	isbn = {9780470519462},
+	mendeley-groups = {GIS},
+	pages = {461},
+	publisher = {John Wiley {\&} Sons},
+	title = {{An introduction to multiagent systems}},
+	url = {https://books.google.de/books?hl=en&lr=&id=X3ZQ7yeDn2IC},
+	year = {2009}
+}
+@book{Obe2011,
+	abstract = {PostGIS is a spatial database extender for the PostgreSQL Open Source Object-Relational database management system. PostGIS follows the OGC/SQL-MM standards. PostGIS in Action is a comprehensive book about PostGIS that will guide you thru many of the basic and advanced features of this fast, feature-rich spatial database. It is an excellent companion book to the already excellent PostGIS reference manuals. While the book is useful for lower versions of PostGIS and PostgreSQL, our main target is PostGIS 1.5+ and PostgreSQL 8.4+. Some of the examples use features introduced in PostgreSQL 8.4+ and PostGIS 1.5. Along the way we will also be detailing features in the beta or pipeline features of later PostGIS and PostgreSQL 9.0. We'll introduce you to both PostGIS as well as PostgreSQL, the powerful DBMS that PostGIS spatially extends. You will learn: The basics of Geographic Infomation Systems (GIS), spatial data processing,and how these extend the kinds of questions you can answer with a relational database How to load various formats of GIS data into the database How spatial reference systems play a role in GIS The power of Spatial SQL to simplify and expand the possibilities of location aware applications and statistical analysis based on location. How PostGIS fits into the standard body of GIS and relational databases. Also check out our related comparison article comparing the big common 3 spatially enabled OGC compliant relational databases Oracle, SQL Server, PostGIS What workflows PostGIS is good for and how to perform them efficiently How to view PostGIS data in desktop applications How to integrate PostGIS in your web applications The appendices cover topics germane to PostGIS and PostgreSQL: Helpful resources for learning more about PostgreSQL, GIS, Free tools and Commerical tools that work with PostGIS Getting free GIS data Getting up and running with PostgreSQL and PostGIS The fundamentals of Structured Query Lanuage (SQL) PostgreSQL unique features, backup and restore, and security management},
+	author = {Obe, Regina O. and Hsu, Leo S.},
+	booktitle = {Geography},
+	doi = {citeulike-article-id:11821780},
+	isbn = {9781935182269},
+	mendeley-groups = {GIS},
+	pages = {520},
+	pmid = {6044812324},
+	title = {{PostGIS in Action}},
+	url = {https://books.google.de/books?id=e-4UngEACAAJ},
+	year = {2011}
+}
+
 
