--- a/hauptprojekt.bib
+++ b/hauptprojekt.bib
@@ -260,5 +260,31 @@
 	url = {https://books.google.de/books?id=e-4UngEACAAJ},
 	year = {2011}
 }
-
+@article{Momjian2001,
+	abstract = {History of PostgreSQL -- University of California at Berkeley -- Development Leaves Berkeley -- PostgreSQL Global Development Team -- Open Source Software -- Issuing Database Commands -- Starting a Database Session -- Controlling a Session -- Getting Help -- Exiting a Session -- Basic SQL Commands -- Relational Databases -- Creating Tables -- Adding Data with Insert -- Viewing Data with Select -- Selecting Specific Rows with Where -- Removing Data with Delete -- Modifying Data with Update -- Sorting Data with Order By -- Destroying Tables -- Customizing Queries -- Data Types -- Quotes Inside Text -- Using Null Values -- Controlling Default Values -- Column Labels -- And/Or Usage -- Range of Values -- Like Comparison -- Regular Expressions -- Case Clause -- Distinct Rows -- Functions and Operators -- Set, Show, and Reset -- SQL Aggregates -- Aggregates -- Using Group By -- Using Having -- Query Tips -- Joining Tables -- Table and Column References -- Joined Tables -- Creating Joined Tables -- Performing Joins -- Three- and Four-Table Joins -- Additional Join Possibilities -- Choosing a Join Key -- One-to-Many Joins -- Unjoined Tables -- Table Aliases and Self-joins -- Non-equijoins -- Ordering Multiple Parts -- Primary and Foreign Keys -- Numbering Rows -- Object Identification Numbers (OIDs) -- Object Identification Number Limitations -- Sequences -- Creating Sequences -- Using Sequences to Number Rows -- Serial Column Type -- Manually Numbering Rows -- Combining Selects.},
+	author = {Momjian, Bruce. and Bruce},
+	doi = {10.1007/s10278-007-9097-5},
+	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Unknown - Unknown - PostgreSQL Introduction and Concepts Bruce Momjian.pdf:pdf},
+	isbn = {0201703319},
+	issn = {1618727X},
+	keywords = {Buffer r,Buffer s,Choosing a,Choosing an,Commands r,Controlling a,Database,Database s,Development,Displaying the,Erasing the,Getting,Global,Help,Interface s,Issuing,Open,Query,Session r,Session s,Software r,Source,Starting a,Summary q,Team r,Typing in the,r POSTGRESQL},
+	mendeley-groups = {GIS},
+	pages = {461},
+	pmid = {18214614},
+	title = {{PostgreSQL : introduction and concepts}},
+	url = {http://www.ca.postgresql.org/docs/aw{\_}pgsql{\_}book/index.html},
+	year = {2001}
+}
+@techreport{Butler2016,
+	abstract = {GeoJSON is a geospatial data interchange format based on JavaScript Object Notation (JSON). It defines several types of JSON objects and the manner in which they are combined to represent data about geographic features, their properties, and their spatial extents. GeoJSON uses a geographic coordinate reference system, World Geodetic System 1984, and units of decimal degrees.},
+	author = {Butler, H. and Daly, M. and Doyle, A. and Gillies, S and Hagen, S. and Schaub, T},
+	doi = {10.17487/RFC7946},
+	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Doyle et al. - 2016 - RFC 7946 - The GeoJSON Format.pdf:pdf},
+	issn = {2070-1721},
+	keywords = {()},
+	mendeley-groups = {GIS},
+	title = {{The GeoJSON Format}},
+	url = {http://www.rfc-editor.org/info/rfc7946. https://www.rfc-editor.org/info/rfc7946},
+	year = {2016}
+}
 
