Restructuring of chapter 4

--- a/hauptprojekt.bib
+++ b/hauptprojekt.bib
@@ -7,7 +7,7 @@
 	url = {http://www.dtic.mil/docs/citations/ADA167570},
 	year = {1986}
 }
-@incollection{Grafarend1995,
+@article{Grafarend1995,
 	author = {Grafarend, E.},
 	doi = {10.1007/978-3-642-79824-5_13},
 	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Grafarend - 1995 - The Optimal Universal Transverse Mercator Projection.pdf:pdf},
@@ -21,7 +21,7 @@
 	abstract = {As digital social data have become increasingly ubiquitous, many have turned their attention to harnessing these massive data sets in order to produce purportedly more accurate and complete understandings of social processes. This intervention addresses the relationships between geography and big data and their intertwined futures. We focus on the impacts of an age of big data on the discipline of geography and geographic thought and methodology, as well as how geography might provide a useful lens through which to understand big data as a social phenomenon in its own right. Ultimately, we see significant potential in big data, but remain skeptical of the prevalent discourses around it, as they tend to obscure, more than reveal, the complexity of social and spatial processes.},
 	author = {Graham, Mark and Shelton, Taylor},
 	doi = {10.1177/2043820613513121},
-	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Graham, Shelton - 2013 - Geography and the future of big data, big data and the future of geography.pdf:pdf},
+	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Graham, Shelton - 2013 - Geography and the future oof big data, big data and the future of geography.pdf:pdf},
 	isbn = {2043820613},
 	issn = {2043-8206},
 	journal = {Dialogues in Human Geography},
@@ -250,11 +250,12 @@
 @book{Obe2011,
 	abstract = {PostGIS is a spatial database extender for the PostgreSQL Open Source Object-Relational database management system. PostGIS follows the OGC/SQL-MM standards. PostGIS in Action is a comprehensive book about PostGIS that will guide you thru many of the basic and advanced features of this fast, feature-rich spatial database. It is an excellent companion book to the already excellent PostGIS reference manuals. While the book is useful for lower versions of PostGIS and PostgreSQL, our main target is PostGIS 1.5+ and PostgreSQL 8.4+. Some of the examples use features introduced in PostgreSQL 8.4+ and PostGIS 1.5. Along the way we will also be detailing features in the beta or pipeline features of later PostGIS and PostgreSQL 9.0. We'll introduce you to both PostGIS as well as PostgreSQL, the powerful DBMS that PostGIS spatially extends. You will learn: The basics of Geographic Infomation Systems (GIS), spatial data processing,and how these extend the kinds of questions you can answer with a relational database How to load various formats of GIS data into the database How spatial reference systems play a role in GIS The power of Spatial SQL to simplify and expand the possibilities of location aware applications and statistical analysis based on location. How PostGIS fits into the standard body of GIS and relational databases. Also check out our related comparison article comparing the big common 3 spatially enabled OGC compliant relational databases Oracle, SQL Server, PostGIS What workflows PostGIS is good for and how to perform them efficiently How to view PostGIS data in desktop applications How to integrate PostGIS in your web applications The appendices cover topics germane to PostGIS and PostgreSQL: Helpful resources for learning more about PostgreSQL, GIS, Free tools and Commerical tools that work with PostGIS Getting free GIS data Getting up and running with PostgreSQL and PostGIS The fundamentals of Structured Query Lanuage (SQL) PostgreSQL unique features, backup and restore, and security management},
 	author = {Obe, Regina O. and Hsu, Leo S.},
-	booktitle = {Geography},
+	booktitle = {PostGIS in Action},
 	doi = {citeulike-article-id:11821780},
 	isbn = {9781935182269},
 	mendeley-groups = {GIS},
 	pages = {520},
+	publisher = {Manning, 2011},
 	pmid = {6044812324},
 	title = {{PostGIS in Action}},
 	url = {https://books.google.de/books?id=e-4UngEACAAJ},
@@ -275,16 +276,39 @@
 	url = {http://www.ca.postgresql.org/docs/aw{\_}pgsql{\_}book/index.html},
 	year = {2001}
 }
-@techreport{Butler2016,
+@article{Butler2016,
 	abstract = {GeoJSON is a geospatial data interchange format based on JavaScript Object Notation (JSON). It defines several types of JSON objects and the manner in which they are combined to represent data about geographic features, their properties, and their spatial extents. GeoJSON uses a geographic coordinate reference system, World Geodetic System 1984, and units of decimal degrees.},
 	author = {Butler, H. and Daly, M. and Doyle, A. and Gillies, S and Hagen, S. and Schaub, T},
 	doi = {10.17487/RFC7946},
 	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Doyle et al. - 2016 - RFC 7946 - The GeoJSON Format.pdf:pdf},
 	issn = {2070-1721},
-	keywords = {()},
 	mendeley-groups = {GIS},
 	title = {{The GeoJSON Format}},
-	url = {http://www.rfc-editor.org/info/rfc7946. https://www.rfc-editor.org/info/rfc7946},
+	url = {http://www.rfc-editor.org/info/rfc7946},
 	year = {2016}
+}
+@article{Karsten2017,
+	author = {Karsten, Lennart},
+	keywords = {Microservices, architecture, front-end, AngularJS},
+	pages = {48},
+	title = {{Redesign of an AngularJS front-end}},
+	year = {2017}
+}
+@article{Abouzeid2009,
+	abstract = {The production environment for analytical data management ap- plications is rapidly changing. Many enterprises are shifting away from deploying their analytical databases on high-end proprietary machines, and moving towards cheaper, lower-end, commodity hardware, typically arranged in a shared-nothing MPP architecture, often in a virtualized environment inside public or private “clouds”. At the same time, the amount of data that needs to be analyzed is exploding, requiring hundreds to thousands of machines to work in parallel to perform the analysis. There tend to be two schools of thought regarding what tech- nology to use for data analysis in such an environment. Propo- nents of parallel databases argue that the strong emphasis on per- formance and efficiency of parallel databases makes them well- suited to perform such analysis. On the other hand, others argue that MapReduce-based systems are better suited due to their supe- rior scalability, fault tolerance, and flexibility to handle unstructured data. In this paper, we explore the feasibility of building a hybrid system that takes the best features from both technologies; the pro- totype we built approaches parallel databases in performance and efficiency, yet still yields the scalability, fault tolerance, and flexi- bility of MapReduce-based systems.},
+	author = {Abouzeid, Azza and Bajda-Pawlikowski, Kamil and Abadi, Daniel and Silberschatz, Avi and Rasin, Alexander},
+	doi = {10.1145/945445.945462},
+	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Abouzeid et al. - Unknown - HadoopDB An Architectural Hybrid of MapReduce and DBMS Technologies for Analytical Workloads.pdf:pdf},
+	isbn = {0000000000000},
+	issn = {2150-8097},
+	journal = {Proceedings of the VLDB Endowment},
+	mendeley-groups = {GIS Performance},
+	number = {1},
+	pages = {922--933},
+	pmid = {685953},
+	title = {{HadoopDB: an architectural hybrid of MapReduce and DBMS technologies for analytical workloads}},
+	url = {https://dl.acm.org/citation.cfm?id=1687731},
+	volume = {2},
+	year = {2009}
 }
 
