--- a/hauptprojekt.bib
+++ b/hauptprojekt.bib
@@ -188,7 +188,7 @@
 	mendeley-groups = {GIS Performance},
 	pages = {44},
 	title = {{A study of three paradigms for storing geospatial data: distributed-cloud model, relational database, and indexed flat file}},
-	url = {http://scholarworks.uno.edu/td/2196},
+	url = {\texttt{http://scholarworks.uno.edu/td/2196}},
 	year = {2016}
 }
 @article{Aji2013,
